removing releative link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Muru Paenga</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="/index.css" rel="stylesheet">
   <head>
   <body>
     <div class="banner">
